[AI Fix] (a11y ADA compliance): darken shared post-link text color for contrast

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -18,7 +18,7 @@
 // }
 
 .post-link{
-    color:  #767676;
+    color:  #747474;
     font-weight: 700;
     font-size: 50%;
     letter-spacing: 0px;
@@ -31,11 +31,11 @@
 }
 
 .post-link:visited{
-    color:  #767676;
+    color:  #747474;
 }
 
 .post-link:hover{
-    color:  #767676;
+    color:  #747474;
 }
 
 
