--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -247,7 +247,7 @@
 .post-link {
   display: block;
   @include relative-font-size(1.5);
-  color: #767676;
+  color: #747474;
 }
 
 
